--- a/samples/import_nb.ipynb
+++ b/samples/import_nb.ipynb
@@ -1,61 +1,42 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "Python 3.7.7 64-bit (conda)",
-   "display_name": "Python 3.7.7 64-bit (conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "be0e4750ffc890a028b6a3317d4147a542f852d18fef4863af5a58724da2f6b0"
-    }
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "source": [
-    "import apppath\n",
-    "import warg\n",
-    "\n",
-    "import draugr\n",
-    "\n",
-    "print(warg.__version__)\n",
-    "print(draugr.__version__)\n",
-    "print(apppath.__version__)\n"
-   ],
-   "cell_type": "code",
-   "metadata": {
-    "tags": []
-   },
-   "execution_count": 2,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "0.5.5\n0.8.2\n0.5.2\n"
-    }
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ]
+    "metadata": {
+        "language_info": {
+            "codemirror_mode": {"name": "ipython", "version": 3},
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.7.7-final",
+        },
+        "orig_nbformat": 2,
+        "kernelspec": {
+            "name": "Python 3.7.7 64-bit (conda)",
+            "display_name": "Python 3.7.7 64-bit (conda)",
+            "metadata": {
+                "interpreter": {"hash": "be0e4750ffc890a028b6a3317d4147a542f852d18fef4863af5a58724da2f6b0"}
+            },
+        },
+    },
+    "nbformat": 4,
+    "nbformat_minor": 2,
+    "cells": [
+        {
+            "source": [
+                "import apppath\n",
+                "import warg\n",
+                "\n",
+                "import draugr\n",
+                "\n",
+                "print(warg.__version__)\n",
+                "print(draugr.__version__)\n",
+                "print(apppath.__version__)\n",
+            ],
+            "cell_type": "code",
+            "metadata": {"tags": []},
+            "execution_count": 2,
+            "outputs": [{"output_type": "stream", "name": "stdout", "text": "0.5.5\n0.8.2\n0.5.2\n"}],
+        },
+        {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": []},
+    ],
 }
